chore(submodule): add prompts submodule to repository

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "paper/ThirdPaper"]
 	path = paper/ThirdPaper
 	url = git@github.com:jiahaoxiang2000/ThirdPaper.git
+[submodule ".github/prompts"]
+	path = .github/prompts
+	url = git@github.com:jiahaoxiang2000/prompts.git
