feat(delta):  Add delta directory to .gitignore and update readme with delta docs

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,linux,latex,tex
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,linux,latex,tex
 
+delta/
+
 # open temp files
 .DS_Store
 
@@ -497,4 +499,3 @@ TSWLatexianTemp*
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,linux,latex,tex
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
-
