feat(typesetting): Add typesetting submodule and update ThirdPaper reference

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule ".github/prompts"]
 	path = .github/prompts
 	url = git@github.com:jiahaoxiang2000/prompts.git
+[submodule "typesetting"]
+	path = typesetting
+	url = git@github.com:jiahaoxiang2000/typesetting.git
