--- a/.gitignore
+++ b/.gitignore
@@ -499,3 +499,4 @@ TSWLatexianTemp*
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,linux,latex,tex
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
+uv.lock
