feat: add mcp.json configuration for paper search server in VSCode

--- a/.gitignore
+++ b/.gitignore
@@ -480,6 +480,7 @@ TSWLatexianTemp*
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
+!.vscode/mcp.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
