--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "paper/FourthPaper"]
 	path = paper/FourthPaper
 	url = git@github.com:jiahaoxiang2000/deeper-paper.git
+[submodule ".claude"]
+	path = .claude
+	url = git@github.com:jiahaoxiang2000/claude-conf.git
