paper: update secondpaper context

--- a/.gitmodules
+++ b/.gitmodules
@@ -15,7 +15,7 @@
 	url = git@github.com:jiahaoxiang2000/claude-conf.git
 [submodule "paper/SecondPaper"]
 	path = paper/SecondPaper
-	url = git@github.com:jiahaoxiang2000/SecondPaper.git
+	url = https://github.com/jiahaoxiang2000/SecondPaper.git
 [submodule "paper/big_paper"]
 	path = paper/big_paper
 	url = git@github.com:jiahaoxiang2000/big_paper.git
